--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,33 +1,46 @@
-html body {
+html, body {
     height: 100%;
     width:100%;
     margin: 0;
     padding: 0;
-    background:#F1F1F1;
+    background:rgb(68, 44, 44);
     }
 
-    .navbar {
+    /* .navbar {
         max-height:100%;
-        margin:0;
+        margin:0px 0px 30px 0px;
         padding:0;
+    } */
+    
+    .photo {
+        height:160px;
+        width:160px;
+        margin-right:20px;
+        margin-bottom:20px;
+    }
+
+    .para {
+        margin-top:20px;
     }
     
-    
-    .topline {
+    /* .topline {
         
-        background-color:#FFFFFF;
+        background-color:black;
         
-        } 
+        }  */
 
 
     .ymg {  
-        margin-left:15%;
-        
-        background-color:#4aaaa5;
-        color:#777777;
-         
+        /* margin-top:5px; */
+        height:100%;
+        background-color:darkgray;
+        color:black;
+        font-size:14px;
+        font-weight:bold;
         font-family: 'Georgia', Times, 'Times New Roman', serif;
-                    
+        padding:15px 15px 0px 10px;
+        /* font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif; */
+        
     }
 
    
@@ -65,19 +78,54 @@ html body {
    
 
     .story {
+       width:60%;
+       height:auto;
+       margin:0 auto;
+       color:black;
        
-       color:#777777;
-       font-size: 12px;
+       padding:20px;
        font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-      
+       background-color:whitesmoke;
+      margin-bottom:30px;
+   }
+   
+   form, .collection {
+       width:60%;
+       height:auto;
+       margin:0 auto;
+       color:black;
+       padding:20px;
+       font-size: 15px;
+       font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+       background-color:whitesmoke;
+      margin-bottom:30px;
    }
 
-  
+   #port{
+       width:80%;
+       height:auto;
+       
+       background-color:lightgray;
+       margin:0 auto;
+       align-items: center;
+       margin-bottom:30px;
+   }
+
+  #header {
+      width:60%;
+      height:50px;
+      margin:0 auto;
+      background-color:whitesmoke;
+      vertical-align: middle;
+    display:flex;
+        
+  }
 
   
     
     ::placeholder {
-        font-size:9px;
+        font-size:11px;
+        font-weight:lighter;
         font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     } 
 
@@ -85,12 +133,45 @@ html body {
     .footer {
         background-color:#666666;
         font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+        height:50px;
+        border-top: 10px solid #596665;
+        padding-top:10px;
+        color:white;
         
-        border-top: 8px solid #4aaaa5;
-        color:#777777;
     }
 
-    row {
-        max-width:960px;
+    .row {
+        width:100%;
+        height:auto;
+        display:flex;
+       justify-content: center;
+       /* justify-content: space-between; */
         margin:0 auto;
+        align-items: center;
+        background-color:gray;
+        text-align: center;
+        padding:10px;
+    } 
+
+    #fog {
+        float:right;
+        margin-right:10px;
+        /* background-color:gray; */
+        font-size:14px;
     }
+
+    .folio {
+        margin:20px;
+        align-items:center;
+        padding:10px;
+    }
+
+    a:hover, button:hover {
+        font-weight:bolder;
+        transition:2s;
+    }
+
+    /* .container-fluid {
+        margin:0 auto;
+        background-color:gray;
+    } */
